<resources>
    <string name="app_name">Catalog app</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

    <!--    InfoFragment-->
    <string name="welcome_to_fluxstore">Welcome to Fluxstore </string>
    <string name="register_screen_text">Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit</string>
    <string name="second_register_screen_title">Thanks for choosing our shop!</string>
    <string name="second_register_screen_text">It will take less than 2 minutes to register and start shopping</string>
    <string name="skip">Skip ></string>
    <string name="time_remain_zero_days">Remain: %dh:%dm</string>
    <string name="sign_in">Sign In</string>
    <string name="get_started">Get started!</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="resrore_password">Restore password</string>

    <!--    Login fragment-->
    <string name="you_are_registered">You are registered</string>
    <string name="login_password">Login: %s \nPassword: %s</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="password_is_wrong">Wrong password or user name.</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_login">Enter login and password</string>
    <string name="work_in_progress">We are working on this feature.</string>

    <!-- Card fragment-->
    <string name="color_size">Color - %1$s,\nSize - %2$s</string>
    <string name="removed_from_cart">%1$s was removed from the cart.</string>
    <string name="checkout">Checkout >></string>
    <string name="total_price">Total: %s</string>

    <string name="leave_profile">Leave profile</string>

    <!--    watch dress card-->
    <string name="add_to_cart">ADD TO CART</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="product_code">Product Code: %s</string>
    <string name="category">Category: %s</string>
    <string name="material">Material: %s</string>
    <string name="country">Country: %s</string>


    <plurals name="time_remaining">
        <item quantity="one">Remain: %d day, %dh:%dm</item>
        <item quantity="other">Remain: %d days, %dh:%dm</item>
    </plurals>

    <string-array name="numberOfItems">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>