<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kolis.test_catalog_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_watch_dress"
            app:destination="@id/navigation_watch_dress" />
    </fragment>

    <fragment
        android:id="@+id/navigation_watch_dress"
        android:name="com.kolis.test_catalog_app.ui.home.dressWatch.WatchDressFragment"
        tools:layout="@layout/fragment_watch_dress">
        <argument
            android:name="model"
            app:argType="com.kolis.test_catalog_app.data.DressModel" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.kolis.test_catalog_app.ui.EmptyFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_empty" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.kolis.test_catalog_app.ui.EmptyFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_empty" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kolis.test_catalog_app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>